# GYM_Service

./: README.md  db_schema.drawio
src/: .gitignore  pyproject.toml
src/alembic/: env.py
src/alembic/versions/: 2023_12_23_1720-c6e4079edd87_initial_migration.py  2023_12_23_1750-23dd7e123ac2_create_tables.py  2023_12_25_1424-c802d3034f36_fix_role.py  2023_12_25_1428-fc6eb73d494d_fix_role.py  2023_12_25_1546-4ae210c4e6e0_fix_role.py  2023_12_25_2026-201112f85dc3_add_email_for_user.py  2023_12_28_2136-23b1b39f1ead_create_new_tables.py
src/app/: main.py
src/app/db/: models.py  session.py
src/app/db/dal/: group_dao.py  role_dao.py  user_dao.py
src/app/group/: router.py  schemas.py
src/app/group/templates/: group_create.html  group_created.html
src/app/role/: router.py  schemas.py
src/app/role/templates/: role_create.html  role_created.html
src/app/static/: user.css
src/app/static/group/: group.css
src/app/static/role/: role.css
src/app/static/user/: user_created.css  user_not_found.css
src/app/templates/: user_profile.html
src/app/user/: router.py  schemas.py
src/app/user/templates/: user_create.html  user_created.html  user_not_found.html  user_profile.html
